[package]
name = "later-mintpass"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "later_mintpass"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
mpl-core = "0.7.1"
borsh = "=1.5.1"
block-buffer = "=0.10.4"
digest = "=0.10.7"
generic-array = "=0.14.7"
zeroize = "=1.3.0"
zeroize_derive = "=1.3.3"
proc-macro-crate = "=3.1.0"